--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,16 @@ jobs:
         with:
           submodules: true
           token: ${{ secrets.CI_TOKEN }}
+      - name: Pull & update submodules recursively
+        run: |
+          git submodule update --init --recursive
+          git submodule update --recursive --remote
+      - name: Commit & push changes
+        run: |
+          git config --global user.name ${{ secrets.USER_NAME }}
+          git config --global user.email ${{ secrets.USER_EMAIL }}
+          git commit -am "Update submodules"
+          git push
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
