--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,12 +31,12 @@ jobs:
         run: |
           git submodule update --init --recursive
           git submodule update --recursive --remote
-      - name: Commit & push changes
+      - name: Commit update
         run: |
-          git config --global user.name ${{ secrets.USER_NAME }}
-          git config --global user.email ${{ secrets.USER_EMAIL }}
-          git commit -am "Update submodules"
-          git push
+          git config --global user.name 'Git bot'
+          git config --global user.email 'bot@noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git commit -am "Auto updated submodule references" && git push || echo "No changes to commit"
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
@@ -46,5 +46,4 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          git submodule update --init --recursive
           cd random-ml-fe && cat README.md
